# NBAStats

./: .dockerignore  .gitignore  Dockerfile  README.md  develop.ipynb  pyproject.toml  render.yaml  requirements.txt
sql/: landing_box_score_detailed_game_stats_2.sql  landing_box_score_detailed_game_stats_3.sql  landing_player_career_stats.sql  landing_season_schedule.sql
sql/views/: nba_season_2021_final_standings.sql  nba_season_2021_team_wins.sql
src/: app.py  dash-app.py  etl_landing_to_staging_asqldb.py  index.py  ingest_api_to_asqldb.py
src/assets/: styles.css
src/data/: nba_standings_2021_2022_season.csv  nba_standings_2021_2022_season_refined.csv
src/data_pipeline/: nba_stats_api.py  sql_column_dtypes.py  utilities.py
src/pages/: home.py  league.py  menu_bar.py  not_found_404.py  teams.py
tsql-scripts/: dimension_players_ddl.sql  dimension_teams.sql  landing_box_score_detailed_game_stats_1.sql  landing_box_score_detailed_game_stats_2.sql  landing_box_score_detailed_game_stats_3.sql  landing_player_career_stats.sql  landing_player_profiles.sql  landing_season_schedule.sql  landing_teams.sql
